style.css
/* ... */
#slideouts a:hover {
  color: var(--clr-light-hover)
}

#slideouts i {
  transition: .4s;
  cursor: pointer;
}

#slideouts i:hover {
  color: var(--clr-light)
}

#slideouts ul {
  position: absolute;
  display: flex;
  top: 72px;
  background: var(--clr-nav);
  list-style: none;
  width: 100%;
  opacity: 0;
  transition: .4s;
}

.left-slideout-menu {
  flex-direction: column;
}

.right-slideout-menu {
  flex-direction: row;
  justify-content: space-around;
}

.left-slideout-menu li,
.right-slideout-menu li {
  text-align: center;
  padding: 1rem;
  font-size: 16px;
}

/* Sections ----------------------------------------------------------------------*/
section {
  padding-top: 100px !important;
}

/* Section: Our products */
#our-products {
  color: var(--clr-light2);
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0 25rem;
}

#our-products>h2 {
  color: var(--clr-light);
  font-size: 30px;
  margin-bottom: 1rem;
}

#slideshow {
  background: #1b1c2070;
  /* background: var(--clr-dark-best); */
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 100%;
  border-radius: 50px;
  box-shadow: inset 0 0 4rem black;
  /* box-shadow: inset 0 0 1rem var(--clr-light); */
  border: 2px solid;
  padding-inline: 15%;
}

#slideshow>div {
  flex: 0 1 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  max-width: 200px;
  margin: 1rem 0;
  width: 180px;
  height: 250px;
  border-radius: 12px 12px 10px 10px;
  background: url("/img/background/jungle.png");
  background-size: cover;
  box-shadow: 0 0 1rem black;
  /* box-shadow: 0 0 1rem var(--clr-light); */
  color: var(--clr-light2);
  position: relative;
}

#slideshow>div::before {
  content: attr(weight);
  position: absolute;
  top: 0;
  right: 0;
  background: rgba(0, 0, 0, 70%);
  margin-top: 1.5rem;
  padding: .2rem;
  padding-inline: .5rem 1rem;
  border-radius: 5px 0 0 5px;
  font-size: 12px;
  color: white;
}

#slideshow>div::after {
  content: attr(title);
  position: absolute;
  bottom: 0;
  left: 0;
  background: rgba(0, 0, 0, 70%);
  margin-bottom: 1.5rem;
  padding: .2rem;
  padding-inline: .5rem 1rem;
  border-radius: 0 5px 5px 0;
  font-size: 12px;
  color: white;
}

#slideshow img {
  border-radius: 10px;
  object-fit: contain;
  width: 100%;
  height: 100%;
  box-shadow: 0 0 1rem black;
}

/* Section: Our history */
#our-history {
  color: var(--clr-light2);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  padding: 0 25rem;
}

#our-history-info {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  font-size: 18px;
  line-height: 1.7rem;
}

#our-history h2 {
  color: var(--clr-light);
  font-size: 30px;
  margin-bottom: 1rem;
}

#our-history img {
  width: 300px;
  margin: 4rem 3rem;
  z-index: -1;
}

#our-history-img {
  position: relative;
}

#our-history-img::before {
  position: absolute;
  content: "";
  top: 0;
  bottom: 0;
  right: 0;
  width: 80%;
  z-index: -1000;
  background: rgb(255, 175, 56);
  background: linear-gradient(-90deg, rgba(255, 175, 56, 1) 0%, rgba(109, 80, 42, 1) 31%, rgba(38, 34, 35, 1) 70%);
}

/* Section: FAQ */
#faq {
  color: var(--clr-light2);
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0 8rem;
}

#faq h2 {
  color: var(--clr-light);
  font-size: 30px;
  margin-bottom: 1rem;
}

#faq ul {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 40rem;
}

#faq li {
  flex-basis: 4rem;
}

#faq li h3 {
  font-size: 19px;
}

#faq li h4 {
  font-size: 15px;
  font-weight: 400;
}

/* Section: Contact us */
#contact-us {
  color: var(--clr-light2);
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

#contact-us>* {
  width: 50%;
}

#contact-us h2 {
  color: var(--clr-light);
  font-size: 30px;
}

#contact-us h3 {
  font-size: 23px;
}

#contact-us form {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#contact-info {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

#contact-info>* {
  width: 30%;
}

#contact-info>*,
#sujet,
#btn-envoyer {
  padding: .6rem;
  font-size: 12px;
}

#contact-us :is(h2, h3),
#contact-info,
#sujet {
  margin-bottom: 1rem;
}

#sujet {
  width: 100%;
}

#btn-envoyer {
  display: flex;
  justify-content: center;
  width: 25%;
  min-width: fit-content;
  padding-top: 0.5em;
  text-align: center;
  /* font-size: 1em; */
  font-size: 15px;
  font-variant: all-petite-caps;
  font-weight: 900;
  border-radius: 5px;
  background: var(--clr-light);
  color: var(--clr-light2);
  border: none;
  outline: none;
  box-shadow: 0 0.2rem #f8d096;
  cursor: pointer;
  transition: .4s;
}

#btn-envoyer:hover {
  background: #b37e24;
}

#btn-envoyer::after {
  content: "\f30b";
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  display: inline-block;
  font-style: normal;
  font-variant: normal;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  padding-left: .5em;
  padding-top: .09em;
}

/* Section: Newsletter */
#newsletter {
  color: var(--clr-light2);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-top: 1rem;
  padding-bottom: 1rem;
  margin-top: 7rem;
}

#newsletter>* {
  width: 100%;
  text-align: center;
  padding: .5rem;
}

#newsletter h2 {
  color: var(--clr-light);
  font-size: 30px;
}

#newsletter h3 {
  font-size: 23px;
}

#newsletter input {
  height: 2rem;
}

#newsletter input[type="text"] {
  width: 28.5rem;
  max-width: 90%;
  padding: .5rem;
  font-size: .8rem;
}

#newsletter input[type="button"] {
  margin-left: .5rem;
  font-size: .9rem;
  padding: 0 .5rem;
  background: var(--clr-light);
  color: var(--clr-light2);
  border: none;
  outline: none;
  border-radius: 2px;
  box-shadow: 0 .2rem #f8d096;
}
/* ... */

